Added SelectColourInteractorTest (100% coverage)